--- a/app/src/main/res/xml/dialog_cardtransaction_scene.xml
+++ b/app/src/main/res/xml/dialog_cardtransaction_scene.xml
@@ -11,18 +11,7 @@
        </KeyFrameSet>
     </Transition>
 
-    <ConstraintSet android:id="@+id/start">
-        <Constraint
-            android:layout_height="wrap_content"
-            motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintEnd_toEndOf="parent"
-            android:layout_width="wrap_content"
-            android:id="@+id/cardLayout"
-            motion:layout_editor_absoluteY="83dp"
-            motion:layout_editor_absoluteX="127dp" />
-    </ConstraintSet>
+    <ConstraintSet android:id="@+id/start"></ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
     </ConstraintSet>
